# Nucleation

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  pyproject.toml  simple_cube.litematic  test-wasm.sh  test_schematic.schem  version.toml
.github/workflows/: ci.yml
benches/: custom_bench.rs  flamegraph_benchmark.rs  schematic_bench.rs
benches/output/: bench_10x10x10.litematic  bench_10x10x10.schem  bench_25x25x25.litematic  bench_25x25x25.schem  bench_50x50x50.litematic  bench_50x50x50.schem  flame_1000x1000x1000.schem  flame_200x200x200.litematic  flame_200x200x200.schem  flame_500x500x500.litematic  flame_500x500x500.schem  flame_75x75x75.litematic  flame_75x75x75.schem
pkg/: nucleation_bg.wasm  package.json
src/: api_definition.rs  block_state.rs  bounding_box.rs  chunk_iterator.rs  ffi.rs  lib.rs  mchprs_world.rs  php.rs  print_utils.rs  python.rs  region.rs  region_operations.rs  string_interner.rs  universal_schematic.rs  wasm.rs
src/block_entity/: generic.rs
src/formats/: litematic.rs  schematic.rs
src/utils/: block_string.rs  nbt.rs
tests/: blockpedia_integration_test.rs  integration_tests.rs  node_wasm_test.js  simple_wasm_test.rs  wasm_node_tests.rs  wasm_tests.rs
tests/bindings/: wasm_tests.rs
tests/samples/: Evaluator.schem  litematic-rose-farm.litematic  test_cube.schem
wasm-test/: minecraft_schematic_utils.js  minecraft_schematic_utils_bg.wasm  nucleation-web_bg.wasm  nucleation_bg.wasm  package.json
