[package]
name = "nucleation"
version = "0.1.9"
edition = "2021"
description = "A high-performance Minecraft schematic parser and utility library"
authors = ["Nano nano@schem.at"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schem-at/Nucleation"
readme = "README.md"
keywords = ["minecraft", "schematic", "parser", "voxel"]
categories = ["game-development", "parser-implementations", "wasm"]

[lib]
# This enables building both a dynamic library (for FFI) and a regular library
crate-type = ["cdylib", "rlib"]

# Let's organize features to control what gets included in each build
[features]
default = []
# The FFI feature will be used when building for PHP integration
ffi = []
# The wasm feature includes all web-related dependencies
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "serde-wasm-bindgen"
]

[dependencies]
# Core dependencies that are always needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
quartz_nbt = "0.2.9"
flate2 = "1.0.32"
log = "0.4.22"
console = "0.15.8"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
thiserror = "1.0.63"

# WASM-specific dependencies, only included when the "wasm" feature is enabled
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.70", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5.1"
num-complex = "0.4"

[[bench]]
name = "schematic_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
lto = true
opt-level = 3